Resolves: fdo#71106 editing dde function crashes

Change-Id: Id2f4bffb7de7201ddeb8f75daaa2723cc42c59b0